# erlang-markdown

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  erlang.mk  justfile  rebar.config
.github/workflows/: ci.yml
apps/markdown/: .gitignore  rebar.config  (+1 more)
codegen/: Dockerfile  config.yaml  pyproject.toml  requirements.txt  schema.json
codegen/src/erlang_markdown_codegen/: __init__.py  __main__.py  code_generator.py  schema.py  test_schema.py
codegen/src/erlang_markdown_codegen/context/: __init__.py  commonmark.py  event.py  records.py  resolve.py  state.py  test.py  unicode.py
codegen/templates0/apps/markdown/include/: markdown_debug_types.hrl.j2  markdown_event.hrl.j2  markdown_resolve.hrl.j2  markdown_state.hrl.j2
codegen/templates0/apps/markdown/src/: markdown_debug_types.erl.j2  markdown_event.erl.j2  markdown_resolve.erl.j2  markdown_state.erl.j2
codegen/templates0/apps/markdown/src/util/: markdown_util_unicode.erl.j2
codegen/templates0/apps/markdown_test/test/: markdown_<suite>_SUITE.erl.j2  markdown_commonmark_SUITE.erl.j2
codegen/test/: attention.yaml  autolink.yaml  block_quote.yaml  character_escape.yaml  character_reference.yaml  code_fenced.yaml  code_indented.yaml  code_text.yaml  definition.yaml  frontmatter.yaml  fuzz.yaml  gfm_autolink_literal.yaml  gfm_footnote.yaml  gfm_strikethrough.yaml  gfm_table.yaml  gfm_tagfilter.yaml  gfm_task_list_item.yaml  hard_break_escape.yaml  hard_break_trailing.yaml  heading_atx.yaml  heading_setext.yaml  html_flow.yaml  html_text.yaml  image.yaml  link_reference.yaml  link_resource.yaml  list.yaml  math_flow.yaml  math_text.yaml  mdx_esm.yaml  mdx_expression_flow.yaml  mdx_expression_text.yaml  misc_bom.yaml  misc_dangerous_html.yaml  misc_dangerous_protocol.yaml  misc_default_line_ending.yaml  misc_line_ending.yaml  misc_soft_break.yaml  misc_tabs.yaml  misc_url.yaml  (+4 more)
config/: config.exs
justfiles/: docker.just  python.just  tools.just
test/: test_helper.exs
(+238 files in other folders)
