###-----------------------------------------------------------------------------
### %CopyrightBegin%
###
### SPDX-License-Identifier: Apache-2.0
###
### Copyright (c) Meta Platforms, Inc. and affiliates.
### Copyright (c) WhatsApp LLC
###
### Licensed under the Apache License, Version 2.0 (the "License");
### you may not use this file except in compliance with the License.
### You may obtain a copy of the License at
###
###     http://www.apache.org/licenses/LICENSE-2.0
###
### Unless required by applicable law or agreed to in writing, software
### distributed under the License is distributed on an "AS IS" BASIS,
### WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
### See the License for the specific language governing permissions and
### limitations under the License.
###
### %CopyrightEnd%
###-----------------------------------------------------------------------------

[project]
name = "erlang-markdown-codegen"
version = "0.1.0"
description = "Generate Erlang code from YAML configurations using Jinja2."
authors = [
    {name = "Andrew Bennett", email = "potatosaladx@meta.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "click (>=8.3.0,<9.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "jsonschema (>=4.25.1,<5.0.0)",
    "option (>=2.1.0,<3.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
]

[project.scripts]
erlang_markdown_codegen = "erlang_markdown_codegen.__main__:main"

[build-system]
requires = ["poetry-core>=2.2.1,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 132

[tool.poetry]
packages = [{include = "erlang_markdown_codegen", from = "src"}]

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
pytest = "^8.4.2"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
